--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             <!--Overlay example end -->
         </div>
         <div id="mainContent2">
-            <p>My name is Mark Beatty some people know me as MJ. I go to Ohio University. I'm a junior studying Game Design and Animation.
+            <p>My name is Mark Beatty some people know me as MJ. I go to Ohio University. I'm a Senior studying Game Design and Animation at Ohio University.
                 I love going to gaming conventions like Pax East and E3! I write articles about gaming. Click this link to see my articles about gaming published on Lords of gaming: <a href="https://lordsofgaming.net/author/beatt10/">This is a link</a>
             </p>
             <p><p> <img src="https://www.ohio.edu/themes/custom/OHIOsubTheme/ohio-logo.svg" width=”400” height=”400”> 
         </div>
         <div id="mainContent3">
-            <p>I work at Gamestop. I cater weddings.<p>
-            <p><img src="https://th.bing.com/th/id/OIP.WOlbud4JJjzSbNVT-2q3wAHaE7?pid=ImgDet&rs=1"></p>   
-            <img src="https://consumerist.com/consumermediallc.files.wordpress.com/2012/06/gamestop8.jpg%3Fw=1060"></p>
+            <p>I Work at Cage Studios as a Level Designer as a Game Design Intern working Sherwood Extreme. I also had an amazing opportunity to be an intern at Ironlordspodcast and Lordsofgaming<p>
+            <p><img src="https://media.licdn.com/dms/image/C560BAQE4C6H7m_4d1w/company-logo_200_200/0/1615068469797?e=2147483647&v=beta&t=K6pyeGlzOJUu6t9aKDMRrhNJLKN8NyO03R6DIU-4OWM"></p>   
+            <img src="https://cdn.akamai.steamstatic.com/steam/apps/1340180/capsule_616x353.jpg?t=1642826053"></p>
         </div>
     </div>  
 </body>
