--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p><p> <img src="https://www.ohio.edu/themes/custom/OHIOsubTheme/ohio-logo.svg" width=”400” height=”400”> 
         </div>
         <div id="mainContent3">
-            <p>I Work at Cage Studios as a Level Designer as a Game Design Intern working Sherwood Extreme. I also had an amazing opportunity to be an intern at Ironlordspodcast and Lordsofgaming<p>
+            <p>I Work at Cage Studios as a Level Designer as a Game Design Intern working Sherwood Extreme. I also had an amazing opportunity to be an intern at Ironlordspodcast and Lordsofgaming as well as Midkidd. <p>
             <p><img src="https://media.licdn.com/dms/image/C560BAQE4C6H7m_4d1w/company-logo_200_200/0/1615068469797?e=2147483647&v=beta&t=K6pyeGlzOJUu6t9aKDMRrhNJLKN8NyO03R6DIU-4OWM"></p>   
             <img src="https://cdn.akamai.steamstatic.com/steam/apps/1340180/capsule_616x353.jpg?t=1642826053"></p>
         </div>
